--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,9 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{
+    "rewrites": [
+      {
+        "source": "/api/(.*)",
+        "destination": "/app.js"
+      }
+    ]
+  }
+  
