--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,1 @@
-{
-    "rewrites": [
-      {
-        "source": "/api/(.*)",
-        "destination": "/app.js"
-      }
-    ]
-  }
-  
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }] }
